examples/ingress-resources/custom-http-errors/error-pages.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-pages
spec:
  replicas: 1
  selector:
    matchLabels:
      app: error-pages
  template:
    metadata:
      labels:
        app: error-pages
    spec:
      containers:
        - name: error-pages
          image: nginx:alpine
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: config-volume
          configMap:
            name: error-pages-config
---
apiVersion: v1
kind: Service
metadata:
  name: error-pages-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: error-pages
